# python-project-52

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.sh  conftest.py  coverage.xml  db.sqlite3  duck.html  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  step1.html
.github/workflows/: my_workflow.yml
django_bootstrap5/: __init__.py  apps.py
django_bootstrap5/templatetags/: __init__.py  django_bootstrap5.py
staticfiles/: staticfiles.json
task_manager/: forms.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/django_bootstrap5/: __init__.py  apps.py
task_manager/django_bootstrap5/templatetags/: __init__.py  django_bootstrap5.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at_and_more.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  (+2 more)
task_manager/templates/: index.html  layout.html
task_manager/tests/: test_asgi.py  test_bootstrap_tags.py  test_forms.py  test_labels.py  test_settings_module.py  test_statuses.py  test_support_modules.py  test_tasks.py  test_users.py  test_views_misc.py  test_wsgi.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
whitenoise/: __init__.py  middleware.py  storage.py
(+23 files in other folders)
